--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+
 </head>
 <body>
-    <h1>NAUCZYCIEL</h1>
+    <div class="container">
+        <div class="container-fluid">
+            <h2>NAUCZYCIEL</h2>
+            
+                <h2>Dane osobowe</h2>
+            </div>
+            <div class="userData">
+                <h2><%= firstname +" "+lastname %></h2>
+                <h2><%=age%></h2>
+                <h2><%=phonenumber%></h2>
+                <h2><%=email%></h2>
+            </div>
+           
+        </div>
+    </div>
 </body>
+
+
 </html>
