--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,8 +1,21 @@
-
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+</head>
 <body>
-    <h1>WYBIERZ</h1>
-    <button class="choice" ><a href="/student">STUDENT</a></button>
-    <button class="choice" ><a href="/teacher">NAUCZYCIEL</a></button>
-    <button class="choice" ><a href="/headmaster">DYREKTOR</a></button>
+        <div class="container">
+            <div class="container-fluid">
+                <div class="container-md">
+                    <h1>WYBIERZ</h1>
+                <button class="btn btn-dark" ><a href="/student">STUDENT</a></button>
+                <button class="btn btn-dark" ><a href="/teacher">NAUCZYCIEL</a></button>
+                <button  class="btn btn-dark"><a href="/headmaster">DYREKTOR</a></button>
+                </div>
+            </div>
+        </div>
 </body>
+</html>
