--- a/views/student.ejs
+++ b/views/student.ejs
@@ -4,11 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css">
+
 </head>
 <body>
-    <h2>STUDENT</h2>
-    <h2><%= name %></h2>
-    
+    <div class="container">
+        <div class="container-fluid">
+            <h2>STUDENT</h2>
+            <div>
+                <div class="list-group">
+                    <button type="button" class="list-group-item list-group-item-action active" disabled>
+                      Wybierz studenta
+                    </button>
+                    <% for(var i=0; i<studentsArray.length ;i++) {%>
+                    <button type="button" class="list-group-item list-group-item-action">studentsArray[0]</button>
+                    <%}%>
+                  </div>
+            </div>
+            <h2>Dane osobowe</h2>
+            <div class="userData">
+                <h2><%= firstname +" "+lastname %></h2>
+                <h2><%=age%></h2>
+                <h2><%=phonenumber%></h2>
+                <h2><%=email%></h2>
+            </div>
+            <table class="table table-hover">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Przedmiot</th>
+                    <th scope="col">Oceny</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">3</th>
+                    <td><%=subject%></td>
+                    <td><%=grades%></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
